change txid generate logic
